--- a/BRDFountain/Views/Main/ShowApplicationDetails.cshtml
+++ b/BRDFountain/Views/Main/ShowApplicationDetails.cshtml
@@ -53,7 +53,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label>System Flow</label>
+                    <label>System Flow &nbsp;<span ng-click="openpopup()" class="label label-success pull-right">{{UploadedSList.length}}</span></label>
 
                     <input type="file" class="btn btn-sm btn-info btn-rounded" ngf-select ng-model="selectModel.Systemflowfile" multiple name="file" />
 
@@ -134,7 +134,7 @@
 
 
                 <div class="form-group">
-                    <label>Decommissioned Evidence</label>
+                    <label>Decommissioned Evidence &nbsp;<span ng-click="openpopup()" class="label label-success pull-right">{{UploadedDList.length}}</span></label>
                     <input type="file" class="btn btn-sm btn-info btn-rounded" ngf-select ng-model="selectModel.Decommissionedfile" multiple name="file" />
 
                     <i ng-show="upload_form.file.$error.required">*required</i><br>
@@ -230,7 +230,7 @@
     <div class="form-group col-lg-12">
         <div class="col-sm-offset-2 col-sm-10">
             <span>
-                <input type="button" value="Next" ng-disabled="addform.$invalid" ng-click="activateTab(1)" class="btn btn-primary" />
+                <input type="button" value="Next" ng-click="activateTab(1)" class="btn btn-primary" />
             </span>&nbsp;
             <input type="button" value="Cancel" ng-click="Confirmcancel()" class="btn btn-primary cancel" />
         </div>
@@ -289,3 +289,66 @@
     </div>
 </div>
 
+
+
+<div class="modal fade" id="viewFiles" tabindex="-1" role="dialog" data-backdrop="static" data-keyboard="false" aria-hidden="true">
+    <div class="modal-dialog" style="width:75%">
+        <div class="modal-content">
+            <div class="modal-header content-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+                <h4 class="modal-title text-center" id="myModalLabel">Uploaded Files</h4>
+            </div>
+            <div class="row">
+                <div style="padding:30px">
+
+                    <div ng-if="UploadedSList.length>0">
+                        <table class="table table-responsive">
+                            <thead>
+                                <tr>
+                                    <th>Version</th>
+                                    <th>FileName</th>
+                                    <th>Download</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr ng-repeat="data in UploadedSList">
+                                    <td>{{data.Version}}</td>
+                                    <td>
+                                        {{data.Comments}}
+                                    </td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div style="padding:30px">
+                    <div ng-if="UploadedDList.length>0">
+                        <table class="table table-responsive">
+                            <thead>
+                                <tr>
+                                    <th>Version</th>
+                                    <th>FileName</th>
+                                    <th>Download</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr ng-repeat="data in UploadedDList">
+                                    <td>{{data.Version}}</td>
+                                    <td>
+                                        {{data.Comments}}
+                                    </td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
