--- a/BRDFountain/Views/Main/ShowApplicationDetails.cshtml
+++ b/BRDFountain/Views/Main/ShowApplicationDetails.cshtml
@@ -342,7 +342,7 @@
                                     <td>
                                         {{data.Comments}}
                                     </td>
-                                    <td></td>
+                                    <td><a ng-click="DownlaodFile(data.Comments,data.RefNumber)">download</a></td>
                                 </tr>
                             </tbody>
                         </table>
