--- a/COBA/Views/Shared/_Layout.cshtml
+++ b/COBA/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 @RenderSection("scripts", required: false)
 <html style="height: auto; min-height: 100%;">
 <head>
-    <base href="#">
+    <base href="/">
     <meta charset="utf-8" />
     <title> COBA</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -267,11 +267,15 @@
     </body>*@
 
 
-<body class="pushmenu-push pushmenu-push-toright">
+<body ng-app="reportApp" ng-controller="MainController" class="pushmenu-push pushmenu-push-toright">
 
     <nav class="pushmenu pushmenu-left pushmenu-open" id="scroll_effect">
         <h3><img src="~/images/logo.svg" width="80px"></h3>
         <div>
+            <ul class="links" data-widget="tree">
+                <li ng-repeat="menu in MenuList" ng-class="{'active': rootname == menu.Path }"><a href="Main/{{menu.Path}}" ng-click="updatemenuclick(menu.Path)"> <span class="icon"><i class="{{menu.Icon}} "></i></span> {{menu.MenuName}}</a></li>
+                @*<li ng-class="{'active': rootname == 'MappingMaster' }"><a href="MappingMaster" ng-click="updatemenuclick('MappingMaster')"> <span class="icon"><i class="fa fa-star-o"></i></span> Mapping Page</a></li>*@
+            </ul>
             <ul class="links">
                 <li><a href="#"><span class="icon"></span>Home</a></li>
                 <li class="active"><a href="#"><span class="icon"></span>Model / Algo Management</a></li>
@@ -430,5 +434,35 @@
     </div>
 
     <script type="text/javascript" src="~/js/script.js"></script>
+    <script src="~/plugins/moment.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="../../bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="../../bower_components/fastclick/lib/fastclick.js"></script>
+    <script src="../../dist/js/adminlte.min.js"></script>
+    <script src="../../dist/js/demo.js"></script>
+
+
+    <script src="~/plugins/bootstrap-datetimepicker.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>
+    <script data-require="ui-bootstrap@0.12.1" data-semver="0.12.1" src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.1.min.js"></script>
+    <script src="//cdn.rawgit.com/angular-ui/bower-ui-grid/v3.0.6/ui-grid.min.js"></script>
+
+    <script type="text/javascript" src="~/plugins/ng-file-upload/dist/ng-file-upload.min.js"></script>
+    <script type="text/javascript" src="~/plugins/ng-file-upload/dist/ng-file-upload-shim.min.js"></script>
+
+    <script src="../js/ReportApp.js"></script>
+
+    <script src="../js/HomeApp.js"></script>
+    <script src="../js/controllers/ClientController.js"></script>
+    <script src="../js/controllers/TaskController.js"></script>
+    <script src="~/js/controllers/OnboardingTaskController.js"></script>
+    <script src="~/js/controllers/MapTaskController.js"></script>
+    <script src="~/js/controllers/EmailsController.js"></script>
+    <script src="~/js/services/ClientService.js"></script>
+    <script src="~/js/services/TaskService.js"></script>
+    <script src="~/js/services/OnboardingTaskService.js"></script>
+    <script src="~/js/services/EmailService.js"></script>
+    <script src="~/js/services/MapTaskService.js"></script>
 </body>
 </html>
