--- a/BRDFountain/Views/Main/Strategytype.cshtml
+++ b/BRDFountain/Views/Main/Strategytype.cshtml
@@ -17,7 +17,7 @@
     </div>*@
 
 
-<div class="col-lg-8 col-md-6 main-content full-width basic-page sidebar">
+<div class="col-lg-8 col-md-6 main-content full-width basic-page sidebar"   style="width:83%;">
     <h4>      Manage Strategy Type     </h4>
     <div class="row">
         <div ng-controller="StrategytypeMasterController" class="nav-tabs-custom">
