--- a/BRDFountain/Views/Main/Country.cshtml
+++ b/BRDFountain/Views/Main/Country.cshtml
@@ -18,7 +18,7 @@
 </div>*@
 
 
-<div class="col-lg-8 col-md-6 main-content full-width basic-page sidebar">
+<div class="col-lg-8 col-md-6 main-content full-width basic-page sidebar"  style="width:83%;">
     <h4>      Manage Country </h4>
     <div class="row">
         <div ng-controller="CountryMasterController" class="nav-tabs-custom">
