--- a/BRDFountain/Views/Main/DiscretionaryCode.cshtml
+++ b/BRDFountain/Views/Main/DiscretionaryCode.cshtml
@@ -17,7 +17,7 @@
     </div>*@
 
 
-<div class="col-lg-8 col-md-6 main-content full-width basic-page sidebar">
+<div class="col-lg-8 col-md-6 main-content full-width basic-page sidebar"  style="width:83%;">
     <h4>      Manage DiscretionaryCode </h4>
     <div class="row">
         <div ng-controller="DiscretionaryCodeMasterController" class="nav-tabs-custom">
