--- a/BRDFountain/Views/Main/FTAApplicationMapping.cshtml
+++ b/BRDFountain/Views/Main/FTAApplicationMapping.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<div class="col-lg-8 col-md-6 main-content full-width basic-page sidebar">
+<div class="col-lg-8 col-md-6 main-content full-width basic-page sidebar"  style="width:83%;">
     <h4>      Manage FTAApplication Mapping </h4>
     <div class="row">
         <div ng-controller="FTAApplicationMappingController" class="nav-tabs-custom">
