--- a/BRDFountain/Views/Main/MasterPage.cshtml
+++ b/BRDFountain/Views/Main/MasterPage.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="col-lg-8 col-md-6 main-content full-width basic-page sidebar">
+﻿<div class="col-lg-8 col-md-6 main-content full-width basic-page sidebar"  style="width:83%;">
     <div class="row mail-task">
         <div class="col-md-3 col-sm-6 col-xs-12 ">
             <a href="Main/FTAApplicationName">
