--- a/BRDFountain/Views/Main/PriorityScore.cshtml
+++ b/BRDFountain/Views/Main/PriorityScore.cshtml
@@ -17,7 +17,7 @@
     </div>*@
 
 
-<div class="col-lg-8 col-md-6 main-content full-width basic-page sidebar">
+<div class="col-lg-8 col-md-6 main-content full-width basic-page sidebar"   style="width:83%;">
     <h4>     Manage Priority Score</h4>
     <div class="row">
         <div ng-controller="PriorityScoreMasterController" class="nav-tabs-custom">
