--- a/COBA/Views/Home/LoginDisplay.cshtml
+++ b/COBA/Views/Home/LoginDisplay.cshtml
@@ -33,14 +33,12 @@
     </div>
 </div>
 <link href="~/css/toaster.css" rel="stylesheet" />
-<script src="~/bower_components/jquery/dist/jquery.min.js"></script>
-<script src="~/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="~/Lib/jquery-1.11.0.min.js"></script>
+<script src="~/Lib/bootstrap.js"></script>
 <script src="~/Lib/angular.min.js"></script>
 <script src="~/Assert/angular-animate.min.js"></script>
 @*<script src="~/Assert/toaster.js"></script>*@
-<script src="~/plugins/iCheck/icheck.min.js"></script>
 @*<script src="~/js/custom.js"></script>*@
-<script src="~/js/animate.js"></script>
 <script src="~/js/loginApp.js"></script>
 
 <style>
