--- a/COBA/Views/Shared/_LoginLayout.cshtml
+++ b/COBA/Views/Shared/_LoginLayout.cshtml
@@ -1,20 +1,18 @@
 ﻿@using System.Web.Optimization;
-@Scripts.Render("~/bundles/customscripts")
+@Scripts.Render("~/bundles/defaultscripts")
 @RenderSection("scripts", required: false)
 <!DOCTYPE html>
 <html>
 <head>
     <title>Case Management System</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/css/bootstrap.min.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="../../bower_components/font-awesome/css/font-awesome.min.css">
     <!-- Ionicons -->
     <link rel="stylesheet" href="../../bower_components/Ionicons/css/ionicons.min.css">
     <!-- Theme style -->
-    <link rel="stylesheet" href="../../dist/css/AdminLTE.min.css">
     <!-- iCheck -->
-    <link rel="stylesheet" href="../../plugins/iCheck/square/blue.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,11 +22,8 @@
     <![endif]-->
     <!-- Google Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
-
-    <script src="~/Scripts/custom.js" type="text/javascript"></script> @*//jay*@
 </head>
 <body class="hold-transition login-page">
-
     @RenderBody()
 </body>
 
