coba user role functions

--- a/COBA/Views/Main/Region.cshtml
+++ b/COBA/Views/Main/Region.cshtml
@@ -1,23 +1,24 @@
 ﻿@*<div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header" style="background-color: #3c8dbc;color:white">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
-                <h4 class="modal-title" id="myModalLabel">Confirm Action</h4>
-            </div>
-            <div class="modal-body">
-                Are you sure you want to delete?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-ng-click="delete()">Ok</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header" style="background-color: #3c8dbc;color:white">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
+                    <h4 class="modal-title" id="myModalLabel">Confirm Action</h4>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-ng-click="delete()">Ok</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+                </div>
             </div>
         </div>
-    </div>
-</div>*@
+    </div>*@
 
 
-<div class="col-lg-10 col-md-9 main-content basic-page sidebar" style="width:83%;">
+<section class="content">
+
     <h4>      Region Master Management    </h4>
 
     <div ng-controller="RegionMasterController" class="nav-tabs-custom">
@@ -48,8 +49,7 @@
 
         </div>
     </div>
-</div>
-
+</section>
 
 
 
