--- a/COBA/Views/Main/UserManagement.cshtml
+++ b/COBA/Views/Main/UserManagement.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="col-lg-10 col-md-9 main-content basic-page sidebar" style="width:83%;">
+﻿
+<section class="content">
+
     <div ng-controller="UserController" class="nav-tabs-custom">
         <div class="box-header with-border">
             <h4> User Management   </h4>
@@ -318,4 +320,4 @@
         </div>
 
     </div>
-</div>
+</section>
