--- a/COBA/Views/Main/Country.cshtml
+++ b/COBA/Views/Main/Country.cshtml
@@ -1,24 +1,23 @@
-﻿
-@*<div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header" style="background-color: #3c8dbc;color:white">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
-                <h4 class="modal-title" id="myModalLabel">Confirm Action</h4>
-            </div>
-            <div class="modal-body">
-                Are you sure you want to delete?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-ng-click="delete()">Ok</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+﻿@*<div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header" style="background-color: #3c8dbc;color:white">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
+                    <h4 class="modal-title" id="myModalLabel">Confirm Action</h4>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-ng-click="delete()">Ok</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+                </div>
             </div>
         </div>
-    </div>
-</div>*@
+    </div>*@
 
 
-<div class="col-lg-8 col-md-6 main-content full-width basic-page sidebar">
+<section class="content">
     <h4>      Country Master Management    </h4>
     <div class="row">
         <div ng-controller="CountryMasterController" class="nav-tabs-custom">
@@ -53,5 +52,4 @@
             </div>
         </div>
     </div>
-</div>
-
+</section>
