--- a/COBA/Views/Main/RoleManagement.cshtml
+++ b/COBA/Views/Main/RoleManagement.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="col-lg-10 col-md-9 main-content basic-page sidebar" style="width:83%;">
+﻿
+<section class="content">
+
     <div ng-controller="RoleController" class="nav-tabs-custom">
         <div class="box-header with-border">
             <h4> Role Management   </h4>
@@ -77,9 +79,9 @@
                                     <br /><br /><br />
                                     <div class="btn-group-vertical">
                                         <button class="btn btn-primary" style="min-width: 9px;padding :13px 4px;" ng-click="AlltoA()" id="btnAllA"><i class="fa fa-angle-double-left"></i></button>
-                                        <button class="btn btn-primary" style="min-width: 9px;padding :13px 4px;"  ng-click="bToA()" id="btnA"><i class="fa fa-angle-left"></i></button>
-                                        <button class="btn btn-primary" style="min-width: 9px;padding :13px 4px;"  ng-click="aToB()" id="btnB"><i class="fa fa-angle-right"></i></button>
-                                        <button class="btn btn-primary" style="min-width: 9px;padding :13px 4px;"  ng-click="AlltoB()" id="btnAllB"><i class="fa fa-angle-double-right"></i></button>
+                                        <button class="btn btn-primary" style="min-width: 9px;padding :13px 4px;" ng-click="bToA()" id="btnA"><i class="fa fa-angle-left"></i></button>
+                                        <button class="btn btn-primary" style="min-width: 9px;padding :13px 4px;" ng-click="aToB()" id="btnB"><i class="fa fa-angle-right"></i></button>
+                                        <button class="btn btn-primary" style="min-width: 9px;padding :13px 4px;" ng-click="AlltoB()" id="btnAllB"><i class="fa fa-angle-double-right"></i></button>
                                     </div>
                                 </div>
                                 <!--/col-2-->
@@ -171,4 +173,4 @@
             </div>
         </div>
     </div>
-</div>
+</section>
